src/components/Repo/Repo.css
.repo-container {
  min-height: 700px;
  padding-bottom: 50px;
}

.user-repo-title {
  text-align: left;
  width: 75%;
  margin: 20px auto;
}

.user-repo-title .dropdown {
  margin-left: 10px;
}

.repo-panel h3 {
  float: left;
  display: inline;
  margin-top: 10px;
  margin-left: 10px;
}

.repo-panel .btn {
  float: right;
  margin-top: 10px;
  margin-right: 5px;
}

.repo-panel .glyphicon {
  margin-right: 0;
}

.panel-title {
  text-align: left;
}

.panel-title .dropdown .caret {
  margin-left: 5px;
  margin-right: -5px;
}

.panel-body .node-col {
  overflow: scroll;
}

.template-item {
  position: static;
}

.template-item .template-label {
  font-weight: bold;
  font-size: 1.5em;
  display: block;
  width: 100%;
}

.apix-template > .template-edit-btn {
  right: 5px;
  top: 0px;
  position: absolute;
  padding: 4px 8px;
}

.template-item .glyphicon {
  margin-right: 0;
}

.apix-template {
  color: #555;
}

.apix-template > .panel {
  margin-top: 20px;
  width: 95%;
}

.template-table thead th {
  text-align: center;
}

.template-rel .rel-title {
  margin-right: 5px;
}

.apix-node-populator .btn-info {
  margin: 5px;
}

/* SIDEBAR CLASSES */
.sidemenu-header {
  margin: 0 -2.3em 2em -2.3em;
  padding: .75em .5em .5em .5em;
  background: #eee;
  border-bottom: 2px solid #ccc;
  color: #666;
}

.bm-menu .property-populator label {
  color: #666;
}

/* SIDEBAR DEFAULT CLASSES */
/* Position and sizing of burger button */
.bm-burger-button {
  display: none;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: #373a47;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: #333;
}

/* General sidebar styles */
.bm-menu {
  background: #f5f5f5;
  padding: 0 1.5em 0;
  font-size: 1.15em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: #b8b7ad;
  padding: 0 0.8em;
}

/* Styling of overlay */
.bm-overlay {
  background: rgba(0, 0, 0, 0.3);
}

